[gd_scene load_steps=18 format=3 uid="uid://78xeufwccsb3"]

[ext_resource type="Script" uid="uid://csxm11wftjhvj" path="res://main_menu.gd" id="1_fu7sn"]
[ext_resource type="Texture2D" uid="uid://hi6wqv17ftow" path="res://Logo.png" id="2_7vrkn"]
[ext_resource type="Texture2D" uid="uid://bm0avbipenecw" path="res://Background.png" id="2_glbon"]
[ext_resource type="Script" uid="uid://b0dulqht324g2" path="res://button.gd" id="3_jix8l"]
[ext_resource type="Texture2D" uid="uid://c0yyq5fd4xggr" path="res://STart.png" id="3_nlkkf"]
[ext_resource type="Texture2D" uid="uid://hhp3wqp262tm" path="res://OPTIONS 1.png" id="5_qe12f"]
[ext_resource type="Texture2D" uid="uid://bmfu1ucitahik" path="res://EXIT.png" id="6_qe12f"]
[ext_resource type="AudioStream" uid="uid://bcmhhqrywthcu" path="res://motivational-christmas-corporate-442034.mp3" id="8_8qtwp"]
[ext_resource type="Script" uid="uid://dndf28x28k7ug" path="res://audio_controll.gd" id="8_dy7ct"]
[ext_resource type="Script" uid="uid://btwr6s80nxevp" path="res://full_screen.gd" id="9_0o4t1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7vrkn"]
texture = ExtResource("2_glbon")
modulate_color = Color(0.48374587, 0.48374587, 0.4837457, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qtwp"]
atlas = ExtResource("3_nlkkf")
region = Rect2(33, 56, 61, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dy7ct"]
atlas = ExtResource("5_qe12f")
region = Rect2(25, 54, 83, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_0o4t1"]
atlas = ExtResource("6_qe12f")
region = Rect2(40, 54, 52, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fu7sn"]
texture = ExtResource("2_7vrkn")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_8qtwp"]
color = Color(0.8646751, 0.86467516, 0.8646751, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_dy7ct"]
color = Color(0.74658537, 9.3854965e-07, 4.813075e-07, 1)
thickness = 6

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 604.0
offset_top = 314.0
offset_right = -346.0
offset_bottom = -154.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fu7sn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -604.0
offset_top = -317.0
offset_right = 342.0
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7vrkn")

[node name="MainButtons" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.0
offset_top = -131.0
offset_right = 57.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9

[node name="Button" type="TextureButton" parent="MainButtons"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture_normal = SubResource("AtlasTexture_8qtwp")
stretch_mode = 0
script = ExtResource("3_jix8l")

[node name="Button2" type="TextureButton" parent="MainButtons"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture_normal = SubResource("AtlasTexture_dy7ct")
stretch_mode = 0

[node name="Button3" type="TextureButton" parent="MainButtons"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture_normal = SubResource("AtlasTexture_0o4t1")
ignore_texture_size = true
stretch_mode = 0

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = -246.0
offset_top = -303.0
offset_right = 535.0
offset_bottom = -64.0
theme_override_styles/panel = SubResource("StyleBoxTexture_fu7sn")

[node name="Options" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -402.0
offset_top = -177.0
offset_right = 85.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 41.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button3" type="TextureButton" parent="Options"]
texture_filter = 1
layout_mode = 0
offset_left = 146.0
offset_top = 256.0
offset_right = 349.0
offset_bottom = 329.0
size_flags_vertical = 3
texture_normal = SubResource("AtlasTexture_0o4t1")
ignore_texture_size = true
stretch_mode = 0

[node name="AudioControll" type="HSlider" parent="Options"]
layout_mode = 0
offset_left = 82.0
offset_top = 43.0
offset_right = 398.0
offset_bottom = 141.0
theme_override_styles/slider = SubResource("StyleBoxLine_8qtwp")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_dy7ct")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_dy7ct")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("8_dy7ct")
audio_bus_name = "Music"

[node name="FullScreen" type="CheckButton" parent="Options"]
layout_mode = 0
offset_left = 81.0
offset_top = 125.0
offset_right = 418.0
offset_bottom = 173.0
text = "FullScreen"
script = ExtResource("9_0o4t1")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_8qtwp")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="MainButtons/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainButtons/Button2" to="." method="_on_Options_2_pressed"]
[connection signal="pressed" from="MainButtons/Button3" to="." method="_on_Exit_3_pressed"]
[connection signal="pressed" from="Options/Button3" to="." method="_on_button_options_pressed"]
[connection signal="value_changed" from="Options/AudioControll" to="Options/AudioControll" method="_on_value_changed"]
[connection signal="toggled" from="Options/FullScreen" to="Options/FullScreen" method="_on_toggled"]
